unpackaged/main/default/objects/SO_Contract_Opp_Line__c/SO_Contract_Opp_Line__c.object-meta.xml
<CustomObject>
    <label>SO Contract Product Line Item</label>
    <nameField>
        <displayFormat>SCOL-{0000}</displayFormat>
        <label>SO Contract Opp Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SO Contract Product Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>