unpackaged/main/default/objects/SO_Contract_Opp_Line__c/fields/additionalNote__c.field-meta.xml
<CustomField>
    <fullName>additionalNote__c</fullName>
    <label>additionalNote</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>