unpackaged/main/default/objects/SO_Contract_Opp_Line__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>EndDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>