unpackaged/main/default/objects/SO_Contract_Opp_Line__c/fields/GSTVATRate__c.field-meta.xml
<CustomField>
    <fullName>GSTVATRate__c</fullName>
    <label>GSTVATRate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>