unpackaged/main/default/objects/SO_Contract_Opp_Line__c/fields/LineDescription__c.field-meta.xml
<CustomField>
    <fullName>LineDescription__c</fullName>
    <label>LineDescription</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>