unpackaged/main/default/objects/SO_Contract_Opp_Line__c/fields/Oli_Name__c.field-meta.xml
<CustomField>
    <fullName>Oli_Name__c</fullName>
    <label>Oli Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>