unpackaged/main/default/objects/SO_Contract_Opp_Line__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>SO Contract opp</label>
    <referenceTo>SO_Contract_opp__c</referenceTo>
    <relationshipName>SO_Contract_Opp_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>