unpackaged/main/default/objects/SO_Contract_Opp_Line__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>StartDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>