unpackaged/main/default/objects/SO_Contract_Opp_Line__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <label>TotalPrice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>