unpackaged/main/default/objects/SO_Contract_Opp_Line__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>UnitPrice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>